# trial

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  CustomGraphicsView.cpp  CustomGraphicsView.h  NewDecription.h  aes_crypto.cpp  aes_crypto.h  circularbutton.cpp  circularbutton.h  controls_overlay.ui  encryptionhandler.cpp  encryptionhandler.h  full-screen  fullscreencontrolhoverhandler.cpp  fullscreencontrolhoverhandler.h  fullscreenviews.cpp  fullscreenviews.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  normal_screen  patternemitter.cpp  patternemitter.h  pause_button  play_button  playbackratehandler.cpp  playbackratehandler.h  reddotrecording.cpp  reddotrecording.h  resources.qrc  screenflashlayer.cpp  screenflashlayer.h  seekbarprogresscontroller.cpp  seekbarprogresscontroller.h  ten-sec-backward  ten-sec-forward  videoprogressbarcontroller.cpp  videoprogressbarcontroller.h  (+4 more)
